feat(backend): route to search for spending item by ID
